# kafka-delta-ingest

./: .gitignore  Cargo.toml  README.adoc  build.rs
.github/workflows/: build.yml
src/: dead_letters.rs  delta_helpers.rs  lib.rs  main.rs  offsets.rs  serialization.rs  writer.rs
tests/: buffer_flush_tests.rs  dead_letter_tests.rs  delta_partitions_tests.rs  deserialization_tests.rs  emails_s3_tests.rs  offset_tests.rs
tests/data/zero_offset/: .gitignore
tests/helpers/: mod.rs
