[package]
name = "miridih-de-kafka-delta-ingest"
version = "0.1.0"
authors = ["Seokjin Shin <sjshin@miridih.com>"]
edition = "2024"
rust-version = "1.85.0"

[dependencies]
flate2 = "1.1.5"
anyhow = "1.0.100"
async-trait = "0.1.89"
apache-avro = "0.21.0"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["color", "env"] }
dipstick = "0.9.4"
env_logger = "0.11.8"
futures = "0.3.31"
jmespatch = { version = "0.3.0", features = ["sync"] }
lazy_static = "1.5.0"
log = "0.4.28"
maplit = "1.0.2"
rdkafka = { version = "0.38.0", features = ["ssl"] }
schema_registry_converter = { version = "4.6.1", features = ["easy", "json", "avro"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tokio-util = "0.7.17"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
url = "2.5.7"
dashmap = "6.1.0"

# datafusion feature is required for writer version 2
deltalake-core = { version = "0.26.0", features = ["json", "datafusion"]}
deltalake-aws = { version = "0.9.0", optional = true }

# s3 feature enabled, helps for locking interactions with DLQ
dynamodb_lock = { version = "0.6.1", optional = true }
# sentry
sentry = { version = "0.46.0", optional = true }

[features]
default = ["s3"]
sentry-ext = ["sentry"]
dynamic-linking = [ "rdkafka/dynamic-linking" ]
s3 = [
    "deltalake-aws",
    "dynamodb_lock",
]

[dev-dependencies]
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"]}
rusoto_credential = { version = "0.48.0"}
rusoto_s3 = { version = "0.48.0", default-features = false, features = ["rustls"]}
serial_test = "*"
tempfile = "3"
time = "0.3.20"
utime = "0.3"

[profile.release]
lto = true
